--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "globalwebindex-task",
+  "name": "mewapp",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,12 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@mui/icons-material": "^5.15.10",
+    "@mui/material": "^5.15.9",
+    "@tanstack/react-query": "^4.36.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.0",
+    "react-waypoint": "^10.3.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
+    "@types/react-query": "^1.2.9",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "@vitejs/plugin-react": "^4.2.1",
