--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tanstack/react-query": "^4.36.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router": "^6.22.1",
     "react-router-dom": "^6.22.0",
     "react-waypoint": "^10.3.0"
   },
